producing visual result on page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <div class="intro py-3 bg-white text-center">
         <div class="container">
             <h2 class="text-success display-3 my-4">The Capital Quiz</h2>
+        </div>
+    </div>
 
+    <!-- Result Section -->
+    <div class="result py-3 d-none bg-white text-center text-success">
+        <div class="container lead">
+            <p>You got <span class="display-4 p-3">0%</span> of the anwsers right.</p>
         </div>
     </div>
 
