changes to html and smooth scroll implemented

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <!-- Quiz Section -->
     <div class="quiz py-4 bg-success">
         <div class="container">
-            <h2 class="my-5 text-white">Test your geography knowledge</h2>
+            <h2 class="my-5 text-white">What's the capital city of...?</h2>
 
             <form class="quiz-form text-light">
                 <div class="my-5">
-                    <p class="lead font-weight-normal">1. What's the capital of Tajikistan?</p>
+                    <p class="lead font-weight-normal">1. Tajikistan</p>
                     <div class="form-check my-2 text-white-50">
                         <input type="radio" name="q1" value="A" checked>
                         <label class="form-check-label">Tashkent</label>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="my-5">
-                    <p class="lead font-weight-normal">2. What's the capital of Laos?</p>
+                    <p class="lead font-weight-normal">2. Laos</p>
                     <div class="form-check my-2 text-white-50">
                         <input type="radio" name="q2" value="A" checked>
                         <label class="form-check-label">Almaty</label>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="my-5">
-                    <p class="lead font-weight-normal">3. What's the capital of Nicaragua?</p>
+                    <p class="lead font-weight-normal">3. Nicaragua</p>
                     <div class="form-check my-2 text-white-50">
                         <input type="radio" name="q3" value="A" checked>
                         <label class="form-check-label">Tegucicalpa</label>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="my-5">
-                    <p class="lead font-weight-normal">4. What's the capital of Solomon Island?</p>
+                    <p class="lead font-weight-normal">4. Solomon Island</p>
                     <div class="form-check my-2 text-white-50">
                         <input type="radio" name="q4" value="A" checked>
                         <label class="form-check-label">Honiara</label>
@@ -89,6 +89,21 @@
                     <div class="form-check my-2 text-white-50">
                         <input type="radio" name="q4" value="C">
                         <label class="form-check-label">Nuku'alofa</label>
+                    </div>
+                </div>
+                <div class="my-5">
+                    <p class="lead font-weight-normal">5. Sierra Leone</p>
+                    <div class="form-check my-2 text-white-50">
+                        <input type="radio" name="q5" value="A" checked>
+                        <label class="form-check-label">Abuja</label>
+                    </div>
+                    <div class="form-check my-2 text-white-50">
+                        <input type="radio" name="q5" value="B">
+                        <label class="form-check-label">Bamako</label>
+                    </div>
+                    <div class="form-check my-2 text-white-50">
+                        <input type="radio" name="q5" value="C">
+                        <label class="form-check-label">Freetown</label>
                     </div>
                 </div>
                 <div class="text-center">
